--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,41 +15,56 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Proyecto Final de Herramientas de programación aplicada IV"
+            android:layout_marginTop="30dp"
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:text="Proyecto Final de Herramientas de programación aplicada IV"
+            android:textColor="@color/white"
+            android:textSize="28sp" />
+
 
         <Button
             android:id="@+id/bvoz"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#e36b2c"
-            android:text="Reconocimiento de voz" />
+            style="@android:style/Widget.Material.Button.Small"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="150dp"
+            android:background="@android:drawable/ic_btn_speak_now"
+             />
 
-        <Button
-            android:id="@+id/bstep"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#e36b2c"
-            android:text="Step Detector"
-            android:onClick="StepD"
-            />
+            android:textAlignment="center"
+            android:layout_marginLeft="115dp"
+            android:text="Reconocimiento de Voz"
+            android:layout_marginTop="-10dp"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/bhuella"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#e36b2c"
-            android:text="Reconocimieno de Huella"
-            android:onClick="BioFace"/>
+            style="@style/Widget.AppCompat.Button"
+            android:layout_marginLeft="160dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="50dp"
+            android:background="?android:attr/fingerprintAuthDrawable"
+            android:backgroundTint="#BF1D11"
+            android:onClick="BioFace" />
 
-        <Button
-            android:id="@+id/orienta"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#e36b2c"
-            android:text="Orientacion"
-            android:onClick="Orientacion"/>
+            android:textAlignment="center"
+            android:layout_marginLeft="110dp"
+            android:text="Reconocimiento de Huella"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+
     </LinearLayout>
 
 </RelativeLayout>
