--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="30dp"
             android:textAlignment="center"
             android:text="Proyecto Final de Herramientas de programación aplicada IV"
-            android:textColor="@color/material_dynamic_neutral70"
+            android:textColor="@color/white"
             android:textSize="28sp" />
 
 
@@ -30,7 +30,7 @@
             android:layout_marginLeft="150dp"
             android:layout_marginTop="150dp"
             android:background="@android:drawable/ic_btn_speak_now"
-            android:textColor="@color/material_dynamic_neutral70"
+            android:backgroundTint="@color/white"
              />
 
         <TextView
@@ -41,7 +41,7 @@
             android:layout_marginLeft="125dp"
             android:text="Reconocimiento de Voz"
             android:layout_marginTop="-10dp"
-            android:textColor="@color/material_dynamic_neutral70"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <ImageButton
@@ -52,7 +52,7 @@
             android:layout_marginLeft="160dp"
             android:layout_marginTop="50dp"
             android:background="?android:attr/fingerprintAuthDrawable"
-            android:backgroundTint="@color/material_dynamic_neutral70"
+            android:backgroundTint="@color/white"
             android:onClick="BioFace" />
 
         <TextView
@@ -62,7 +62,7 @@
             android:textAlignment="center"
             android:layout_marginLeft="120dp"
             android:text="Reconocimiento de Huella"
-            android:textColor="@color/material_dynamic_neutral70"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
 
