--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,12 @@
             style="@android:style/Widget.Material.Button.Small"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginLeft="150dp"
+            android:layout_marginStart="150dp"
             android:layout_marginTop="150dp"
             android:background="@android:drawable/ic_btn_speak_now"
             android:backgroundTint="@color/white"
+
+
              />
 
         <TextView
@@ -38,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_marginLeft="125dp"
+            android:layout_marginStart="125dp"
             android:text="Reconocimiento de Voz"
             android:layout_marginTop="-10dp"
             android:textColor="@color/white"
@@ -49,18 +51,19 @@
             style="@style/Widget.AppCompat.Button"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="160dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="50dp"
             android:background="?android:attr/fingerprintAuthDrawable"
             android:backgroundTint="@color/white"
-            android:onClick="BioFace" />
+            android:onClick="BioFace"
+            />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_marginLeft="120dp"
+            android:layout_marginStart="120dp"
             android:text="Reconocimiento de Huella"
             android:textColor="@color/white"
             android:textSize="16sp" />
